# ModernCppWithTDD

./: CMakeLists.txt  README.md
1_Soundex/: CMakeLists.txt  Soundex.cpp  Soundex.h
1_Soundex/test/: CMakeLists.txt  ut_Soundex.cpp
